@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.8) unstable; urgency=low
 
   * widget-http: close response body in error code path
+  * http-cache: implemented memcached backend (--memcached-server)
 
  --
 
